<resources>
    <string name="app_name">BarberShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_Service">Book Appointment</string>
    <string name="menu_about">About Us</string>
    <string name="fragment_date">Appointment selection</string>
    <string name="menu_myAppointment">My Appointments</string>
    <string name="menu_log">Logout</string>
    <string name="menu_review">Reviews</string>
    <string name="menu_management">Appointment Management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>