<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nested_appointment"
            android:icon="@drawable/book"
            android:title="@string/menu_Service" />

        <item
            android:id="@+id/nested_myAppointments"
            android:icon="@drawable/my_appointment"
            android:title="@string/menu_myAppointment" />


        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/review"
            android:title="@string/menu_review" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/menu_log" />

    </group>


</menu>